push das seçoes adicionais

--- a/index.html
+++ b/index.html
@@ -7,6 +7,101 @@
     <link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
-    <h1>Hello world</h1>
+    <div class="container">
+        <header class="main">
+            <nav class="main__nav">
+                <ul class="main__nav__list">
+                    <li><a href="#" class="list__link">
+                    Temporada 1</a></li>
+                    <li><a href="#" class="list__link">
+                    Temporada 2</a></li>
+                    <li><a href="#" class="list__link">
+                    Temporada 3</a></li>
+                    <li><a href="#" class="list__link">
+                    Temporada 4</a></li>
+                    <li><a href="#" class="list__link">
+                    Temporada 5</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+    <section class="content container">
+        <div class="text">
+            <h2>S.W.A.T</h2>
+            <p> Força de Intervenção acompanha Daniel Harrelson (Shemar Moore), um tenente do Esquadrão de Armas e Táticas Especiais que recebe o comando de uma unidade de párias grosseiros, mas muito bem treinados. A equipe de Hondo é chamada para resolver crimes de alta periculosidade sempre que as demais opções de ajuda já se esgotaram.</p>
+        </div>
+        <section class="haircuts">
+            <div class="haircut">
+                <img src="./dist/images/swat w.png" alt="swat">
+                <div class="haircut__text">
+                    <strong>Temporada 1</strong>
+                    <button>Assistir</button>
+                </div>
+            </div>
+            <div class="haircut">
+                <img src="./dist/images/swat w.png" alt="swat">
+                <div class="haircut__text">
+                    <strong>Temporada 2</strong>
+                    <button>Assistir</button>
+                </div>
+            </div>
+            <div class="haircut">
+                <img src="./dist/images/swat w.png" alt="swat">
+                <div class="haircut__text">
+                    <strong>Temporada 3</strong>
+                    <button>Assistir</button>
+                </div>
+            </div>
+        </section>
+        <section class="haircuts">
+            <div class="haircut">
+                <img src="./dist/images/swat w.png" alt="swat">
+                <div class="haircut__text">
+                    <strong>Temporada 4</strong>
+                    <button>Assistir</button>
+                </div>
+            </div>
+            <div class="haircut">
+                <img src="./dist/images/swat w.png" alt="swat">
+                <div class="haircut__text">
+                    <strong>Temporada 5</strong>
+                    <button>Assistir</button>
+                </div>
+            </div>
+            <div class="haircut">
+                <img src="./dist/images/swat w.png" alt="swat">
+                <div class="haircut__text">
+                    <strong>Temporada 6</strong>
+                    <button>Assistir</button>
+                </div>
+            </div>
+        </section>
+    </section>
+    <section class="regressive">
+        <div class="container">
+            <div class="content-rg">
+                <h1 class="title">Lançamento da nova temporada</h1>
+                <div class="count-down">
+                    <div class="box">
+                        <h3 id="days">00</h3>
+                        <p>Dias</p>
+                    </div>
+                    <div class="box">
+                        <h3 id="hours">00</h3>
+                        <p>Horas</p>
+                    </div>
+                    <div class="box">
+                        <h3 id="minutes">00</h3>
+                        <p>Minutos</p>
+                    </div>
+                    <div class="box">
+                        <h3 id="seconds">00</h3>
+                        <p>Segundos</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="./main.js"></script>
 </body>
 </html>
